--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jeff's Website</title>
   <script type="module" crossorigin src="/three/assets/index.b6aee40d.js"></script>
-  <link rel="stylesheet" href="/three/assets/index.b2ee653c.css">
+  <link rel="stylesheet" href="/three/assets/index.f2ecf2c3.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <main>
 
     <header>
-      <h1>Jeff Delaney</h1>
+      <h1>Alex Tugin</h1>
       <p>🚀 Welcome to my website!</p>
     </header>
 
